# HyperplaneFitting

./: CMakeLists.txt  FittingHyperplane.cpp  FittingLine.cpp  FittingPlane.cpp  Functions.cpp  Functions.h  Functions.ih  Install.txt  README.md
Data/Data2D/: test1.txt  test2.txt  test3.txt
Data/Data3D/: cube2_d8_boundary6.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  twoPlanes.txt  twoPlanesNoise300.txt
Data/Data4D/: test1.txt  test2.txt  test3.txt  test4.txt
